# trabalho4-cg

./: CMakeLists.txt  delaunay.h  edge.h  globals.h  main.cpp  point2d.h  polygonal.h  triangle.h
